Phase_2/aws_infrastructure/nat.tf
resource "aws_eip" "nat_eip" { 
  domain = "vpc"
}

resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.subnet1.id
  depends_on    = [aws_internet_gateway.main]
}
